project2_handle/test/test_11711707_05.spl
int test0() {
    return test1(a);
}

int test1(int n){
    if(n < 0){
        return test0(1, 3);
    }else{
        char c = test0(1, 2, 3);
        return test0(c, 2);
    }
    return 1;
}